fix: fix double scroll bars with long tables

--- a/nerdlets/maintainer-dashboard/styles.scss
+++ b/nerdlets/maintainer-dashboard/styles.scss
@@ -25,6 +25,10 @@ $img-path: '~react-widgets/lib/img';
   overflow: visible;
 }
 
+html {
+  height: auto;
+}
+
 .ospo-tableheader .filter.date-filter {
   flex-flow: column;
 }
